...
        android:layout_height="match_parent"
        android:background="@color/backgroundColor"
        tools:context=".ui.fragments.favorites.FavoriteRecipesFragment">


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/favoriteRecipesRecyclerView"
            setVisibility="@{mainViewModel.readFavoriteRecipes}"
            setData="@{mAdapter}"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/no_data_image_view"
            setVisibility="@{mainViewModel.readFavoriteRecipes}"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:alpha="0.5"
            android:src="@drawable/ic_menu_book"
            android:visibility="invisible"
...
