<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/save_to_favorites_menu"
        android:icon="@drawable/ic_star"
        android:title="@string/save_to_favorites"
        app:showAsAction="ifRoom"
        android:iconTint="@color/white"
        tools:targetApi="o" />
</menu>