...
    <string name="cheap">Cheap</string>
    <string name="healthy">Healthy</string>
    <string name="diary_free">Diary Free</string>
    <string name="save_to_favorites">Save to Favorites</string>
    <string name="no_favorite_recipes">No Favorite Recipes.</string>
    <string name="delete_favorite_menu">Delete Favorite Menu</string>
    <string name="delete_all">Delete All</string>
    <string name="loremIpsum">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. </string>
    <string name="share">Share</string>
</resources>
